# mnist

./: Cargo.toml
src/: main.rs
