[package]
name = "my_mnist_network"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Vorster"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mnist = "0.6.0"
ndarray = "0.16.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.210"
